<resources>
    <string name="app_name">Santander Bike</string>

    <string name="mapmain.data.error">Data received incorrect</string>
    <string name="mapmain.response.error">Connection error with the server</string>
    <string name="adapter.title.totalbikes">Total bikes:</string>
    <string name="adapter.title.freebikes">Free bikes:</string>
    <string name="adapter.title.freeplaces">Free places:</string>

    <string name="action_settings">Settings</string>
    <string name="action_creditos">Credits</string>
    <string name="credits_icon" translatable="false">Icons made by http://www.freepik.com from http://www.flaticon.com is licensed by http://creativecommons.org/licenses/by/3.0/</string>
    <string name="support">Support</string>
    <string name="rate">Rate</string>
    <string name="other_applications">Other applications</string>
    <string name="credits">Credits</string>
    <string name="support_subtitle">For any questions amadavapps@gmail.com</string>
    <string name="rate_subtitle">If you liked the application, valued positively in the store</string>
    <string name="other_applications_subtitle">See other applications developped by amadav</string>
    <string name="credits_subtitle">List of credits</string>





</resources>
