<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="14dp"
    android:id="@+id/fragment_settings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_marginBottom="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/relaSupport"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/iconSupport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_email_black_24dp"
                    android:layout_centerVertical="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/support"
                    android:id="@+id/lblTitleSupport"
                    android:textSize="20sp"
                    android:layout_toRightOf="@+id/iconSupport"
                    android:layout_marginLeft="30dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/support_subtitle"
                    android:id="@+id/lblSubtitleSupport"
                    android:layout_below="@+id/lblTitleSupport"
                    android:layout_marginLeft="55dp" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relaRate"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_below="@+id/relaSupport"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/iconRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_black_24dp"
                    android:layout_centerVertical="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate"
                    android:id="@+id/lblTitleRate"
                    android:textSize="20sp"
                    android:layout_toRightOf="@+id/iconRate"
                    android:layout_marginLeft="30dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_subtitle"
                    android:id="@+id/lblSubtitleRate"
                    android:layout_below="@+id/lblTitleRate"
                    android:layout_marginLeft="55dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relaApps"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_below="@+id/relaRate"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/iconApps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_apps_black_24dp"
                    android:layout_centerVertical="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other_applications"
                    android:id="@+id/lblTitleApps"
                    android:textSize="20sp"
                    android:layout_toRightOf="@+id/iconApps"
                    android:layout_marginLeft="30dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other_applications_subtitle"
                    android:id="@+id/lblSubtitleApps"
                    android:layout_below="@+id/lblTitleApps"
                    android:layout_marginLeft="55dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relaCredits"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_below="@+id/relaApps"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/iconCredits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_info_black_24dp"
                    android:layout_centerVertical="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credits"
                    android:id="@+id/lblTitleCredits"
                    android:textSize="20sp"
                    android:layout_toRightOf="@+id/iconCredits"
                    android:layout_marginLeft="30dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credits_subtitle"
                    android:id="@+id/lblSubtitleCredits"
                    android:layout_below="@+id/lblTitleCredits"
                    android:layout_marginLeft="55dp" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>



</FrameLayout>